Avancement du pied de page

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -14,7 +14,7 @@
 
     <footer id = "Footer">
         <div id = "FooterPremièrePartie">
-            <a href="page_accueil.html"> Musée Bretcho </a>
+            <a class = "FooterLienGras" href="page_accueil.html"> Musée Bretcho </a>
             <p> Arrêt "musée Bretcho"
                 <br>
                 Parking Bruno Lechaud
@@ -27,21 +27,22 @@
             <a href="contact.html">
                 <button id = 'button_info'> Nous contacter </button>
             </a> 
-        </div id = "FooterDeuxièmePartie">
+        </div>
+        <div id = "FooterDeuxièmePartie">
             <ul>
-                <li> <a href='page_accueil.html'> Agenda </a> </li>
-                <li> <a href='page_accueil.html'> Expositions </a> </li>
-                <li> <a href='page_accueil.html'> Collections </a> </li>
-                <li> <a href='page_accueil.html'> Billetterie </a> </li>
+                <li> <a  class = "FooterLienGras" href='page_accueil.html'> Agenda </a> </li>
+                <li> <a  class = "FooterLienGras" href='page_accueil.html'> Expositions </a> </li>
+                <li> <a  class = "FooterLienGras" href='page_accueil.html'> Collections </a> </li>
+                <li> <a  class = "FooterLienGras" href='page_accueil.html'> Billetterie </a> </li>
             </ul>
             <ul>
-                <li> <a href='page_accueil.html'> Espace presse </a> </li>
-                <li> <a href='page_accueil.html'> Entreprise </a> </li>
-                <li> <a href='page_accueil.html'> Horaires </a> </li>
-                <li> <a href='page_accueil.html'> Accès </a> </li>
-                <li> <a href='page_accueil.html'> FAQ </a> </li>
+                <li> <a class = "FooterLienBasique" href='page_accueil.html'> Espace presse </a> </li>
+                <li> <a class = "FooterLienBasique" href='page_accueil.html'> Entreprise </a> </li>
+                <li> <a class = "FooterLienBasique" href='page_accueil.html'> Horaires </a> </li>
+                <li> <a class = "FooterLienBasique" href='page_accueil.html'> Accès </a> </li>
+                <li> <a class = "FooterLienBasique" href='page_accueil.html'> FAQ </a> </li>
             </ul>
-        <div>
+        </div>
         <div id = "FooterTroisièmePartie">
             <ul>
                 <li> <a href='page_accueil.html'> Facebook </a> </li>
