Avancement du pied de page

--- a/contact.html
+++ b/contact.html
@@ -62,4 +62,55 @@
                 
 </body>
 
+<footer>
+    <div id = "footerPremierePartie">
+        <a class = "footerLienGras" href="page_accueil.html"> Musée Bretcho </a>
+        <p> Arrêt "musée Bretcho"
+            <br>
+            Parking Bruno Lechaud
+        </p>
+        <p> HORAIRES </p>
+        <p>  Du lundi au samedi de 10h00 à 19h00 
+            <br>
+            Nocturne jusqu'a 23h le 1<sup>er</sup> mardi du mois
+        </p>
+        <a href="contact.html">
+            <button id = 'boutonInfo'> Nous contacter </button>
+        </a> 
+    </div>
+    <div id = "footerDeuxiemePartie">
+        <ul>
+            <li> <a  class = "footerLienGras" href='page_accueil.html'> Agenda </a> </li>
+            <li> <a  class = "footerLienGras" href='page_accueil.html'> Expositions </a> </li>
+            <li> <a  class = "footerLienGras" href='page_accueil.html'> Collections </a> </li>
+            <li> <a  class = "footerLienGras" href='page_accueil.html'> Billetterie </a> </li>
+        </ul>
+        <ul>
+            <li> <a class = "footerLienBasique" href='page_accueil.html'> Espace presse </a> </li>
+            <li> <a class = "footerLienBasique" href='page_accueil.html'> Entreprise </a> </li>
+            <li> <a class = "footerLienBasique" href='page_accueil.html'> Horaires </a> </li>
+            <li> <a class = "footerLienBasique" href='page_accueil.html'> Accès </a> </li>
+            <li> <a class = "footerLienBasique" href='page_accueil.html'> FAQ </a> </li>
+        </ul>
+    </div>
+    <div id = "footerTroisiemePartie">
+        <ul>
+            <li> <a href='https://fr-fr.facebook.com/login.php'> <img class="icon" src="icon-facebook.png"> </a> </li>
+            <li> <a href='https://www.instagram.com/'> <img class="icon" src="icon-insta.png"> </a> </li>
+            <li> <a href='https://www.youtube.com/?gl=FR&hl=fr'> <img class="icon" src="icon-youtube.png"> </a> </li>
+            <li> <a href='https://fr.linkedin.com/'> <img class="icon" src="icon-linkedin.png"> </a> </li>
+        </ul>
+    </div>
+    <div id = "footerQuatriemePartie">
+        <ul id="liste">
+            <li> <a class = "footerLienPetit" href='page_accueil.html'> Mentions légales </a> </li>
+            <li> <a class = "footerLienPetit" href='page_accueil.html'> Données personnelles </a> </li>
+            <li> <a class = "footerLienPetit" href='page_accueil.html'> Cookies </a> </li>
+            <li> <a class = "footerLienPetit" href='page_accueil.html'> Marchés publics </a> </li>
+            <li> <a class = "footerLienPetit" href='page_accueil.html'> Crédits photographiques </a> </li>
+        </ul>
+    </div>
+
+</footer>
+
 </html>
