avancement première page

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -10,6 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
+<header>
+    <video controls autoplay>      
+        <source src="video_en-tete.mp4" type="video/mp4" />
+        <source src="video_en-tete.webm" type="video/webm" />
+
+        
+      </video>
+      
+</header>
+
 <body>
 
     <footer>
@@ -45,10 +55,10 @@
         </div>
         <div id = "footerTroisiemePartie">
             <ul>
-                <li> <a href='https://fr-fr.facebook.com/login.php'> <img class="icon" src="icon-facebook.png"> </a> </li>
-                <li> <a href='https://www.instagram.com/'> <img class="icon" src="icon-insta.png"> </a> </li>
-                <li> <a href='https://www.youtube.com/?gl=FR&hl=fr'> <img class="icon" src="icon-youtube.png"> </a> </li>
-                <li> <a href='https://fr.linkedin.com/'> <img class="icon" src="icon-linkedin.png"> </a> </li>
+                <li> <a href='https://fr-fr.facebook.com/login.php'> <img class="icon" src="icon-facebook.png" alt="Icône de l'application Facebook" > </a> </li>
+                <li> <a href='https://www.instagram.com/'> <img class="icon" src="icon-insta.png" alt="Icône de l'application Instagram"> </a> </li>
+                <li> <a href='https://www.youtube.com/?gl=FR&hl=fr'> <img class="icon" src="icon-youtube.png" alt="Icône de l'application Youtube"> </a> </li>
+                <li> <a href='https://fr.linkedin.com/'> <img class="icon" src="icon-linkedin.png" alt="Icône de l'application Linkedin"> </a> </li>
             </ul>
         </div>
         <div id = "footerQuatriemePartie">
