--- a/HTML/collection.html
+++ b/HTML/collection.html
@@ -14,23 +14,11 @@
     <main>
         <div id="apercu-oeuvre-template" class="apercu-oeuvre">
             <a id="41441" href="oeuvre.html">
-            <img src="https://www.artic.edu/iiif/2/2d484387-2509-5e8e-2c43-22f9981972eb"  srcset="https://www.artic.edu/iiif/2/2d484387-2509-5e8e-2c43-22f9981972eb/full/200,/0/default.jpg" alt="Photo d'euvre d'art">
+            <div class="calque-apercu-oeuvre"><img src="" srcset="" alt="Photo d'euvre d'art"></div>
             <p></p>
             </a>
         </div>
     </main>
-    
-
-        <!-- <img id="test-img" src="https://www.artic.edu/iiif/2/2d484387-2509-5e8e-2c43-22f9981972eb"  srcset="https://www.artic.edu/iiif/2/2d484387-2509-5e8e-2c43-22f9981972eb/full/200,/0/default.jpg" alt="test api image">
-        <img id="test-img-2" src="https://www.artic.edu/iiif/2/4237947a-8908-0a35-9f20-bc803f549f36"  srcset="https://www.artic.edu/iiif/2/4237947a-8908-0a35-9f20-bc803f549f36/full/200,/0/default.jpg" alt="test api image">
-        <img id="test-img-3" src="https://www.artic.edu/iiif/2/fb4d7f4c-d15e-6e2f-1be5-81a386596519"  srcset="https://www.artic.edu/iiif/2/fb4d7f4c-d15e-6e2f-1be5-81a386596519/full/200,/0/default.jpg" alt="test api image">
-
-        <a class="lien-oeuvre" id="41441" href="oeuvre.html"> id 41441 </a>
-        <a class="lien-oeuvre" id="456" href="oeuvre.html"> id 456 </a>
-        <a class="lien-oeuvre" id="789" href="oeuvre.html"> id 789 </a>
-        <a class="lien-oeuvre" id="741" href="oeuvre.html"> id 741 </a> -->
-
-        
 
         <footer>
             <div id = "footerPremierePartie">
