--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -11,54 +11,56 @@
 </head>
 
 <body>
-    <h1> CONTACTS </h1>
-        <h2> INFORMATIONS </h2>
-            <p> 
-                Vous avez une question ou une remarque ? Contactez le secrétariat :              
-                <br><br>
-                e-mail : informations@bretcho.fr
-                <br><br>
-                Téléphone : 06 45 36 58 79
+    <main>
+        <h1> CONTACTS </h1>
+            <h2> INFORMATIONS </h2>
+                <p> 
+                    Vous avez une question ou une remarque ? Contactez le secrétariat :              
+                    <br><br>
+                    e-mail : informations@bretcho.fr
+                    <br><br>
+                    Téléphone : 06 45 36 58 79
+                    <br>
+                    Aux heures d'ouvertures du musée.
+                </p>
+            <h2> PERSONNE EN SITUATION DE HANDICAP </h2>
+                <p> 
+                    Ligne dédiée aux personnes en situation de handicap : 06 45 36 60 78
+                    <br><br>
+                    e-mail : assistance-handicap@bretcho.fr
+                </p>
+            <h2> BILLETTERIE </h2>
+                <p> 
+                    Pour obtenir de l'aide pour vos réservations en ligne ou pour un remboursement, veuillez vous adresser au service billeterie :
+                    <br> <br>
+                    e-mail : assistance-billeterie@bretcho.fr
+                </p>
+            <h2> VISITE EN GROUPE </h2>
+                <ul> 
+                    <li> Groupes scolaires </li>
+                        <p> e-mail : education@betcho.fr </p>
+                    <li> Évènement </li>
+                        <p> e-mail : evenement@bretcho.fr </p>
+                    <li> Groupe de plus de 10 personnes </li>
+                        <p> Téléphone : 06 45 36 65 80 </p>
+                </ul>
+            <h2> ENTREPRISES ET PROFESSIONNELS </h2>
+                <ul> 
+                    <li> Service de presse </li>
+                        <p> e-mail : presse@betcho.fr </p>
+                    <li> Mécénat </li>
+                        <p> e-mail : mecenat@bretcho.fr </p>
+                    <li> Tournages </li>
+                        <p> e-mail : tournages@bretcho.fr </p>
+                    <li> Tournages </li>
+                        <p> e-mail : tournages@bretcho.fr </p>
+                </ul>
+            <h2> RECHERCHES ET COLLECTIONS </h2>
+            <p> Pour consulter des publications, ressources ou recherches : 
                 <br>
-                Aux heures d'ouvertures du musée.
+                e-mail : contact-recherches-scientifuqe@bretcho.fr
             </p>
-        <h2> PERSONNE EN SITUATION DE HANDICAP </h2>
-            <p> 
-                Ligne dédiée aux personnes en situation de handicap : 06 45 36 60 78
-                <br><br>
-                e-mail : assistance-handicap@bretcho.fr
-            </p>
-        <h2> BILLETTERIE </h2>
-            <p> 
-                Pour obtenir de l'aide pour vos réservations en ligne ou pour un remboursement, veuillez vous adresser au service billeterie :
-                <br> <br>
-                e-mail : assistance-billeterie@bretcho.fr
-            </p>
-        <h2> VISITE EN GROUPE </h2>
-            <ul> 
-                <li> Groupes scolaires </li>
-                    <p> e-mail : education@betcho.fr </p>
-                <li> Évènement </li>
-                    <p> e-mail : evenement@bretcho.fr </p>
-                <li> Groupe de plus de 10 personnes </li>
-                    <p> Téléphone : 06 45 36 65 80 </p>
-            </ul>
-        <h2> ENTREPRISES ET PROFESSIONNELS </h2>
-            <ul> 
-                <li> Service de presse </li>
-                    <p> e-mail : presse@betcho.fr </p>
-                <li> Mécénat </li>
-                    <p> e-mail : mecenat@bretcho.fr </p>
-                <li> Tournages </li>
-                    <p> e-mail : tournages@bretcho.fr </p>
-                <li> Tournages </li>
-                    <p> e-mail : tournages@bretcho.fr </p>
-            </ul>
-        <h2> RECHERCHES ET COLLECTIONS </h2>
-        <p> Pour consulter des publications, ressources ou recherches : 
-            <br>
-            e-mail : contact-recherches-scientifuqe@bretcho.fr
-        </p>
+    </main>
 
     <footer>
         <div id = "footerPremierePartie">
