--- a/accueil.html
+++ b/accueil.html
@@ -20,21 +20,13 @@
     </header>
 
     <main>
-        <div class="apercu-oeuvre">
-            <img src="" alt="Photo d'euvre d'art">
-            <p class="titre-oeuvre"> Titre de l'oeuvre </p>
-            <p class="auteur-oeuvre">Artiste qui a fait l'oeuvre </p>
-        </div>
-        <div class="apercu-oeuvre">
-            <img src="" alt="Photo d'euvre d'art">
-            <p class="titre-oeuvre"> Titre de l'oeuvre </p>
-            <p class="auteur-oeuvre">Artiste qui a fait l'oeuvre </p>
-        </div>
-        <div class="apercu-oeuvre">
-            <a href="HTML/collection.html">
-                <button id='boutonVoirPlus'> Découvrir plus </button>
-            </a>
-        </div>
+        <p> Bienvenue au Musée Bretcho ! Nous possédons une collection d'oeuvres d'art d'une richesse culturelle qui n'est
+            pas anodine. Vous pourrez découvrir les chefs-d'oeuvres d'artistes du monde entiers. Laissez-vous guider au sein 
+            des trois étage de notre bâtiment plein d'histoire, où vous pourrez observer l'évolution de l'art au fil des siècles. 
+            Le Musée Bretcho a par ailleurs été élu par Tripadvisor parmi les meilleurs attractions culturelles de 2023 en France. </p>
+        <a href="HTML/collection.html">
+            <button id='boutonVoirPlus'> Découvrir la collection </button>
+        </a>
     </main>
 
     <footer>
