Début page oeuvre

--- a/HTML/collection.html
+++ b/HTML/collection.html
@@ -8,14 +8,16 @@
     <link href="../CSS/collection.css" rel="stylesheet" />
     <link href="../CSS/general.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Collection d'oeuvres du musée Bretcho" />
 </head>
 
 <body>
     <main>
         <div id="apercu-oeuvre-template" class="apercu-oeuvre">
-            <a id="41441" href="oeuvre.html">
-            <div class="calque-apercu-oeuvre"><img src="" srcset="" alt="Photo d'euvre d'art"></div>
-            <p></p>
+            <a id="" href="oeuvre.html">
+            <img src="" srcset="" alt="Photo d'euvre d'art">
+            <h1></h1>
+            <h2></h2>
             </a>
         </div>
     </main>
