--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -8,6 +8,7 @@
     <link href="../CSS/contact.css" rel="stylesheet" />
     <link href="../CSS/general.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Comment contacter le musée Bretcho" />
 </head>
 
 <body>
