--- a/HTML/oeuvre.html
+++ b/HTML/oeuvre.html
@@ -8,11 +8,17 @@
     <link href="../CSS/oeuvre.css" rel="stylesheet" />
     <link href="../CSS/general.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Détail d'une oeuvre du musée Bretcho" />
 </head>
 
 <body>
 
-    <p id="test-id">id</p>
+    <main>
+        <img src="" srcset="" alt="Photo d'euvre d'art">
+        <h1></h1>
+        <h2></h2>
+        <p></p>
+    </main>
 
     <footer>
         <div id = "footerPremierePartie">
