Correction + début loader

--- a/accueil.html
+++ b/accueil.html
@@ -25,13 +25,11 @@
             pas anodine. Vous pourrez découvrir les chefs-d'oeuvres d'artistes du monde entiers. Laissez-vous guider au sein 
             des trois étage de notre bâtiment plein d'histoire, où vous pourrez observer l'évolution de l'art au fil des siècles. 
             Le Musée Bretcho a par ailleurs été élu par Tripadvisor parmi les meilleurs attractions culturelles de 2023 en France. </p>
-        <a href="HTML/collection.html">
-            <button id='boutonVoirPlus'> Découvrir la collection </button>
-        </a>
+        <a href="HTML/collection.html" id='boutonVoirPlus' class="bouton"> Découvrir la collection </a>
     </main>
 
     <footer>
-        <div id = "footerPremierePartie">
+        <section id = "footerPremierePartie">
             <a class = "footerLienGras" href="accueil.html"> Musée Bretcho </a>
             <p> Arrêt "musée Bretcho"
                 <br>
@@ -42,11 +40,9 @@
                 <br>
                 Nocturne jusqu'a 23h le 1<sup>er</sup> mardi du mois
             </p>
-            <a href="HTML/contact.html">
-                <button id = 'boutonInfo'> Nous contacter </button>
-            </a> 
-        </div>
-        <div id = "footerDeuxiemePartie">
+            <a href="HTML/contact.html" id = 'boutonInfo' class="bouton"> Nous contacter </a> 
+        </section>
+        <section id = "footerDeuxiemePartie">
             <ul>
                 <li> <a  class = "footerLienGras" href='../accueil.html'> Agenda </a> </li>
                 <li> <a  class = "footerLienGras" href='../accueil.html'> Expositions </a> </li>
@@ -60,16 +56,16 @@
                 <li> <a class = "footerLienBasique" href='../accueil.html'> Accès </a> </li>
                 <li> <a class = "footerLienBasique" href='../accueil.html'> FAQ </a> </li>
             </ul>
-        </div>
-        <div id = "footerTroisiemePartie">
+        </section>
+        <section id = "footerTroisiemePartie">
             <ul>
                 <li> <a href='https://fr-fr.facebook.com/login.php'> <img class="icon" src="Ressources/icon-facebook.png"> </a> </li>
                 <li> <a href='https://www.instagram.com/'> <img class="icon" src="Ressources/icon-insta.png"> </a> </li>
                 <li> <a href='https://www.youtube.com/?gl=FR&hl=fr'> <img class="icon" src="Ressources/icon-youtube.png"> </a> </li>
                 <li> <a href='https://fr.linkedin.com/'> <img class="icon" src="Ressources/icon-linkedin.png"> </a> </li>
             </ul>
-        </div>
-        <div id = "footerQuatriemePartie">
+        </section>
+        <section id = "footerQuatriemePartie">
             <ul id="liste">
                 <li> <a class = "footerLienPetit" href='../accueil.html'> Mentions légales </a> </li>
                 <li> <a class = "footerLienPetit" href='../accueil.html'> Données personnelles </a> </li>
@@ -77,7 +73,7 @@
                 <li> <a class = "footerLienPetit" href='../accueil.html'> Marchés publics </a> </li>
                 <li> <a class = "footerLienPetit" href='../accueil.html'> Crédits photographiques </a> </li>
             </ul>
-        </div>
+        </section>
     </footer>
 
 </body>
