--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-        <div id = "footerPremierePartie">
+        <section id = "footerPremierePartie">
             <a class = "footerLienGras" href="../accueil.html"> Musée Bretcho </a>
             <p> Arrêt "musée Bretcho"
                 <br>
@@ -75,11 +75,9 @@
                 <br>
                 Nocturne jusqu'a 23h le 1<sup>er</sup> mardi du mois
             </p>
-            <a href="contact.html">
-                <button id = 'boutonInfo'> Nous contacter </button>
-            </a> 
-        </div>
-        <div id = "footerDeuxiemePartie">
+            <a href="contact.html" id = 'boutonInfo' class="bouton"> Nous contacter </a> 
+        </section>
+        <section id = "footerDeuxiemePartie">
             <ul>
                 <li> <a  class = "footerLienGras" href='../accueil.html'> Agenda </a> </li>
                 <li> <a  class = "footerLienGras" href='../accueil.html'> Expositions </a> </li>
@@ -93,16 +91,16 @@
                 <li> <a class = "footerLienBasique" href='../accueil.html'> Accès </a> </li>
                 <li> <a class = "footerLienBasique" href='../accueil.html'> FAQ </a> </li>
             </ul>
-        </div>
-        <div id = "footerTroisiemePartie">
+        </section>
+        <section id = "footerTroisiemePartie">
             <ul>
                 <li> <a href='https://fr-fr.facebook.com/login.php'> <img class="icon" src="../Ressources/icon-facebook.png"> </a> </li>
                 <li> <a href='https://www.instagram.com/'> <img class="icon" src="../Ressources/icon-insta.png"> </a> </li>
                 <li> <a href='https://www.youtube.com/?gl=FR&hl=fr'> <img class="icon" src="../Ressources/icon-youtube.png"> </a> </li>
                 <li> <a href='https://fr.linkedin.com/'> <img class="icon" src="../Ressources/icon-linkedin.png"> </a> </li>
             </ul>
-        </div>
-        <div id = "footerQuatriemePartie">
+        </section>
+        <section id = "footerQuatriemePartie">
             <ul id="liste">
                 <li> <a class = "footerLienPetit" href='../accueil.html'> Mentions légales </a> </li>
                 <li> <a class = "footerLienPetit" href='../accueil.html'> Données personnelles </a> </li>
@@ -110,7 +108,7 @@
                 <li> <a class = "footerLienPetit" href='../accueil.html'> Marchés publics </a> </li>
                 <li> <a class = "footerLienPetit" href='../accueil.html'> Crédits photographiques </a> </li>
             </ul>
-        </div>
+        </section>
     </footer>
                 
 </body>
