position des boutons +  début en-tête

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -12,55 +12,60 @@
 </head>
 
 <body>
+    <header>
+        <div id="titre">
+            <h1> Contact </h1>
+        </div>
+    </header>
+
     <main>
-        <h1> CONTACTS </h1>
             <h2> INFORMATIONS </h2>
                 <p> 
                     Vous avez une question ou une remarque ? Contactez le secrétariat :              
-                    <br><br>
-                    e-mail : informations@bretcho.fr
-                    <br><br>
-                    Téléphone : 06 45 36 58 79
                     <br>
-                    Aux heures d'ouvertures du musée.
-                </p>
+                    <b>informations@bretcho.fr</b>
+                    <br>
+                    <b>06 45 36 58 79  </b> (Aux heures d'ouvertures du musée)
+                </p>          
             <h2> PERSONNE EN SITUATION DE HANDICAP </h2>
                 <p> 
-                    Ligne dédiée aux personnes en situation de handicap : 06 45 36 60 78
-                    <br><br>
-                    e-mail : assistance-handicap@bretcho.fr
+                    Ligne dédiée aux personnes en situation de handicap : 
+                    <br>
+                    <b>assistance-handicap@bretcho.fr</b>
+                    <br>
+                    <b>06 45 36 60 78</b>
                 </p>
             <h2> BILLETTERIE </h2>
                 <p> 
                     Pour obtenir de l'aide pour vos réservations en ligne ou pour un remboursement, veuillez vous adresser au service billeterie :
-                    <br> <br>
-                    e-mail : assistance-billeterie@bretcho.fr
+                    <br> 
+                    <b>assistance-billeterie@bretcho.fr</b>
                 </p>
             <h2> VISITE EN GROUPE </h2>
                 <ul> 
-                    <li> Groupes scolaires </li>
-                        <p> e-mail : education@betcho.fr </p>
-                    <li> Évènement </li>
-                        <p> e-mail : evenement@bretcho.fr </p>
-                    <li> Groupe de plus de 10 personnes </li>
-                        <p> Téléphone : 06 45 36 65 80 </p>
+                    <li> Groupes scolaires :</li>
+                        <p> <b>education@betcho.fr</b> </p>
+                    <li> Évènement : </li>
+                        <p> <b>evenement@bretcho.fr</b> </p>
+                    <li> Groupe de plus de 10 personnes : </li>
+                        <p> <b>06 45 36 65 80</b> </p>
                 </ul>
             <h2> ENTREPRISES ET PROFESSIONNELS </h2>
                 <ul> 
-                    <li> Service de presse </li>
-                        <p> e-mail : presse@betcho.fr </p>
-                    <li> Mécénat </li>
-                        <p> e-mail : mecenat@bretcho.fr </p>
-                    <li> Tournages </li>
-                        <p> e-mail : tournages@bretcho.fr </p>
-                    <li> Tournages </li>
-                        <p> e-mail : tournages@bretcho.fr </p>
+                    <li> Service de presse : </li>
+                        <p> <b>presse@betcho.fr</b> </p>
+                    <li> Mécénat : </li>
+                        <p> <b>mecenat@bretcho.fr</b> </p>
+                    <li> Tournages : </li>
+                        <p> <b>tournages@bretcho.fr</b> </p>
+                    <li> Tournages : </li>
+                        <p> <b>tournages@bretcho.fr</b> </p>
                 </ul>
             <h2> RECHERCHES ET COLLECTIONS </h2>
-            <p> Pour consulter des publications, ressources ou recherches : 
-                <br>
-                e-mail : contact-recherches-scientifuqe@bretcho.fr
-            </p>
+                <p> Pour consulter des publications, ressources ou recherches : 
+                    <br>
+                    <b>contact-recherches-scientifique@bretcho.fr</b>
+                </p>
     </main>
 
     <footer>
