--- a/accueil.html
+++ b/accueil.html
@@ -12,9 +12,16 @@
 </head>
 
 <body>
-
+    
     <header>
-        <video controls autoplay muted playsinline loop>      
+        <nav>
+            <ul>
+                <li><a href="#">Exposition</a></li>
+                <li><a href="#">Collections</a></li>
+                <li><a href="#">Visiter</a></li>
+            </ul>
+        </nav>
+        <video autoplay muted playsinline loop>      
             <source src="Ressources/video_en-tete.mp4" type="video/mp4" />
             <source src="Ressources/video_en-tete.webm" type="video/webm" />
         </video>
@@ -23,7 +30,7 @@
     <main>
         <p> Bienvenue au Musée Bretcho ! Nous possédons une collection d'oeuvres d'art d'une richesse culturelle qui n'est
             pas anodine. Vous pourrez découvrir les chefs-d'oeuvres d'artistes du monde entiers. Laissez-vous guider au sein 
-            des trois étage de notre bâtiment plein d'histoire, où vous pourrez observer l'évolution de l'art au fil des siècles. 
+            des trois étages de notre bâtiment plein d'histoire, où vous pourrez observer l'évolution de l'art au fil des siècles. 
             Le Musée Bretcho a par ailleurs été élu par Tripadvisor parmi les meilleurs attractions culturelles de 2023 en France. </p>
         <a href="HTML/collection.html" id='boutonVoirPlus' class="bouton"> Découvrir la collection </a>
     </main>
