Fin du loader + corrections

--- a/HTML/collection.html
+++ b/HTML/collection.html
@@ -5,14 +5,18 @@
 <head>
     <title>Notre collection</title>
     <meta charset="UTF-8"/>
-    <link href="../CSS/collection.css" rel="stylesheet" />
     <link href="../CSS/general.css" rel="stylesheet" />
+    <link href="../CSS/collection.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Collection d'oeuvres du musée Bretcho" />
 </head>
 
 <body>
     <main>
+        <div id="divConteneur">
+            <div id="loader"></div>
+        </div>
+
         <div id="apercu-oeuvre-template" class="apercu-oeuvre">
             <a id="" href="oeuvre.html">
             <img src="" srcset="" alt="Photo d'euvre d'art">
