--- a/HTML/oeuvre.html
+++ b/HTML/oeuvre.html
@@ -5,8 +5,8 @@
 <head>
     <title>Oeuvre</title>
     <meta charset="UTF-8"/>
-    <link href="../CSS/oeuvre.css" rel="stylesheet" />
     <link href="../CSS/general.css" rel="stylesheet" />
+    <link href="../CSS/oeuvre.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Détail d'une oeuvre du musée Bretcho" />
 </head>
@@ -14,7 +14,9 @@
 <body>
 
     <main>
-        <div id="loader"></div>
+        <div id="divConteneur">
+            <div id="loader"></div>
+        </div>
 
         <img src="" srcset="" alt="Photo d'euvre d'art">
         <h1></h1>
