Page oeuvre modifié et complété

--- a/HTML/oeuvre.html
+++ b/HTML/oeuvre.html
@@ -16,10 +16,13 @@
     <main>
         <div id="loader"></div>
 
-        <img src="" srcset="" alt="Photo d'euvre d'art">
-        <h1></h1>
-        <h2></h2>
-        <p></p>
+        <img src="" srcset="" alt="Photo d'oeuvre d'art">
+        <div id="informations">
+            <h1></h1>
+            <h2></h2>
+            <h3></h3>
+            <p></p>
+        </div>
     </main>
 
     <footer>
