--- a/accueil.html
+++ b/accueil.html
@@ -51,17 +51,17 @@
         </section>
         <section id = "footerDeuxiemePartie">
             <ul>
-                <li> <a  class = "footerLienGras" href='../accueil.html'> Agenda </a> </li>
-                <li> <a  class = "footerLienGras" href='../accueil.html'> Expositions </a> </li>
-                <li> <a  class = "footerLienGras" href='../accueil.html'> Collections </a> </li>
-                <li> <a  class = "footerLienGras" href='../accueil.html'> Billetterie </a> </li>
+                <li> <a  class = "footerLienGras" href="#"> Agenda </a> </li>
+                <li> <a  class = "footerLienGras" href="#"> Expositions </a> </li>
+                <li> <a  class = "footerLienGras" href='HTML/collection.html'> Collections </a> </li>
+                <li> <a  class = "footerLienGras" href="#"> Billetterie </a> </li>
             </ul>
             <ul>
-                <li> <a class = "footerLienBasique" href='../accueil.html'> Espace presse </a> </li>
-                <li> <a class = "footerLienBasique" href='../accueil.html'> Entreprise </a> </li>
-                <li> <a class = "footerLienBasique" href='../accueil.html'> Horaires </a> </li>
-                <li> <a class = "footerLienBasique" href='../accueil.html'> Accès </a> </li>
-                <li> <a class = "footerLienBasique" href='../accueil.html'> FAQ </a> </li>
+                <li> <a class = "footerLienBasique" href="#"> Espace presse </a> </li>
+                <li> <a class = "footerLienBasique" href="#"> Entreprise </a> </li>
+                <li> <a class = "footerLienBasique" href="#"> Horaires </a> </li>
+                <li> <a class = "footerLienBasique" href="#"> Accès </a> </li>
+                <li> <a class = "footerLienBasique" href="#"> FAQ </a> </li>
             </ul>
         </section>
         <section id = "footerTroisiemePartie">
@@ -74,11 +74,11 @@
         </section>
         <section id = "footerQuatriemePartie">
             <ul id="liste">
-                <li> <a class = "footerLienPetit" href='../accueil.html'> Mentions légales </a> </li>
-                <li> <a class = "footerLienPetit" href='../accueil.html'> Données personnelles </a> </li>
-                <li> <a class = "footerLienPetit" href='../accueil.html'> Cookies </a> </li>
-                <li> <a class = "footerLienPetit" href='../accueil.html'> Marchés publics </a> </li>
-                <li> <a class = "footerLienPetit" href='../accueil.html'> Crédits photographiques </a> </li>
+                <li> <a class = "footerLienPetit" href="#"> Mentions légales </a> </li>
+                <li> <a class = "footerLienPetit" href="#"> Données personnelles </a> </li>
+                <li> <a class = "footerLienPetit" href="#"> Cookies </a> </li>
+                <li> <a class = "footerLienPetit" href="#"> Marchés publics </a> </li>
+                <li> <a class = "footerLienPetit" href="#"> Crédits photographiques </a> </li>
             </ul>
         </section>
     </footer>
