Menu + Page oeuvre responsive

--- a/HTML/oeuvre.html
+++ b/HTML/oeuvre.html
@@ -12,6 +12,15 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../accueil.html">Accueil</a></li>
+                <li><a href="collection.html">Collection</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
         <div id="divConteneur">
