--- a/accueil.html
+++ b/accueil.html
@@ -16,9 +16,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Exposition</a></li>
-                <li><a href="#">Collections</a></li>
-                <li><a href="#">Visiter</a></li>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="HTML/collection.html">Collection</a></li>
+                <li><a href="HTML/contact.html">Contact</a></li>
             </ul>
         </nav>
         <video autoplay muted playsinline loop>      
