--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -13,21 +13,25 @@
 
 <body>
     <header>
-        <div id="titre">
-            <h1> Contact </h1>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="../accueil.html">Accueil</a></li>
+                <li><a href="collection.html">Collection</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-            <h2> INFORMATIONS </h2>
+            <h1> INFORMATIONS </h2>
                 <p> 
                     Vous avez une question ou une remarque ? Contactez le secrétariat :              
                     <br>
                     <b>informations@bretcho.fr</b>
                     <br>
-                    <b>06 45 36 58 79  </b> (Aux heures d'ouvertures du musée)
+                    <b>06 45 36 58 79 </b> (Aux heures d'ouvertures du musée)
                 </p>          
-            <h2> PERSONNE EN SITUATION DE HANDICAP </h2>
+            <h1> PERSONNE EN SITUATION DE HANDICAP </h2>
                 <p> 
                     Ligne dédiée aux personnes en situation de handicap : 
                     <br>
@@ -35,13 +39,13 @@
                     <br>
                     <b>06 45 36 60 78</b>
                 </p>
-            <h2> BILLETTERIE </h2>
+            <h1> BILLETTERIE </h2>
                 <p> 
                     Pour obtenir de l'aide pour vos réservations en ligne ou pour un remboursement, veuillez vous adresser au service billeterie :
                     <br> 
                     <b>assistance-billeterie@bretcho.fr</b>
                 </p>
-            <h2> VISITE EN GROUPE </h2>
+            <h1> VISITE EN GROUPE </h2>
                 <ul> 
                     <li> Groupes scolaires :</li>
                         <p> <b>education@betcho.fr</b> </p>
@@ -50,7 +54,7 @@
                     <li> Groupe de plus de 10 personnes : </li>
                         <p> <b>06 45 36 65 80</b> </p>
                 </ul>
-            <h2> ENTREPRISES ET PROFESSIONNELS </h2>
+            <h1> ENTREPRISES ET PROFESSIONNELS </h2>
                 <ul> 
                     <li> Service de presse : </li>
                         <p> <b>presse@betcho.fr</b> </p>
@@ -61,7 +65,7 @@
                     <li> Tournages : </li>
                         <p> <b>tournages@bretcho.fr</b> </p>
                 </ul>
-            <h2> RECHERCHES ET COLLECTIONS </h2>
+            <h1> RECHERCHES ET COLLECTIONS </h2>
                 <p> Pour consulter des publications, ressources ou recherches : 
                     <br>
                     <b>contact-recherches-scientifique@bretcho.fr</b>
