--- a/HTML/oeuvre.html
+++ b/HTML/oeuvre.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <div id="divConteneur">
+        <div id="conteneurLoader">
             <div id="loader"></div>
         </div>
 
