--- a/HTML/oeuvre.html
+++ b/HTML/oeuvre.html
@@ -9,10 +9,12 @@
     <link href="../CSS/oeuvre.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Détail d'une oeuvre du musée Bretcho" />
+    <link rel="icon" href="../Ressources/favicon.ico" />
 </head>
 
 <body>
     <header>
+        <a href="../accueil.html"> <img id="logoBretcho" src="../Ressources/logo.png" alt="Logo du Musée Bretcho"> </a>
         <nav>
             <ul>
                 <li><a href="../accueil.html">Accueil</a></li>
@@ -27,7 +29,7 @@
             <div id="loader"></div>
         </div>
 
-        <img src="" srcset="" alt="Photo d'oeuvre d'art">
+        <img id="imageOeuvre" src="" srcset="" alt="Photo d'oeuvre d'art">
         <div id="informations">
             <h1></h1>
             <h2></h2>
