--- a/HTML/collection.html
+++ b/HTML/collection.html
@@ -9,10 +9,12 @@
     <link href="../CSS/collection.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Collection d'oeuvres du musée Bretcho" />
+    <link rel="icon" href="../Ressources/favicon.ico" />
 </head>
 
 <body>
     <header>
+        <a href="../accueil.html"> <img id="logoBretcho" src="../Ressources/logo.png" alt="Logo du Musée Bretcho"> </a>
         <nav>
             <ul>
                 <li><a href="../accueil.html">Accueil</a></li>
