--- a/accueil.html
+++ b/accueil.html
@@ -9,11 +9,13 @@
     <link href="CSS/accueil.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Accueil du musée Bretcho" />
+    <link rel="icon" href="/Ressources/favicon.ico" />
 </head>
 
 <body>
     
     <header>
+        <a href="accueil.html"> <img id="logoBretcho" src="Ressources/logo.png" alt="Logo du Musée Bretcho"> </a>
         <nav>
             <ul>
                 <li><a href="#">Accueil</a></li>
