--- a/HTML/oeuvre.html
+++ b/HTML/oeuvre.html
@@ -14,12 +14,12 @@
 
 <body>
     <header>
-        <a href="../accueil.html"> <img id="logoBretcho" src="../Ressources/logo.png" alt="Logo du Musée Bretcho"> </a>
         <nav>
             <ul>
-                <li><a href="../accueil.html">Accueil</a></li>
-                <li><a href="collection.html">Collection</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="../accueil.html"> <img id="logoBretcho" src="../Ressources/logo.png" alt="Logo du Musée Bretcho"> </a> </li>
+                <li class="menu"><a href="../accueil.html">Accueil</a></li>
+                <li class="menu"><a href="collection.html">Collection</a></li>
+                <li class="menu"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -39,53 +39,57 @@
     </main>
 
     <footer>
-        <section id = "footerPremierePartie">
-            <a class = "footerLienGras" href="../accueil.html"> Musée Bretcho </a>
-            <p> Arrêt "musée Bretcho"
-                <br>
-                Parking Bruno Lechaud
-            </p>
-            <p> HORAIRES </p>
-            <p>  Du lundi au samedi de 10h00 à 19h00 
-                <br>
-                Nocturne jusqu'a 23h le 1<sup>er</sup> mardi du mois
-            </p>
-            <a href="contact.html" id = 'boutonInfo' class="bouton"> Nous contacter </a> 
-        </section>
-        <section id = "footerDeuxiemePartie">
-            <ul>
-                <li> <a  class = "footerLienGras" href='../accueil.html'> Agenda </a> </li>
-                <li> <a  class = "footerLienGras" href='../accueil.html'> Expositions </a> </li>
-                <li> <a  class = "footerLienGras" href='../accueil.html'> Collections </a> </li>
-                <li> <a  class = "footerLienGras" href='../accueil.html'> Billetterie </a> </li>
-            </ul>
-            <ul>
-                <li> <a class = "footerLienBasique" href='../accueil.html'> Espace presse </a> </li>
-                <li> <a class = "footerLienBasique" href='../accueil.html'> Entreprise </a> </li>
-                <li> <a class = "footerLienBasique" href='../accueil.html'> Horaires </a> </li>
-                <li> <a class = "footerLienBasique" href='../accueil.html'> Accès </a> </li>
-                <li> <a class = "footerLienBasique" href='../accueil.html'> FAQ </a> </li>
-            </ul>
-        </section>
-        <section id = "footerTroisiemePartie">
-            <ul>
-                <li> <a href='https://fr-fr.facebook.com/login.php'> <img class="icon" src="../Ressources/icon-facebook.png"> </a> </li>
-                <li> <a href='https://www.instagram.com/'> <img class="icon" src="../Ressources/icon-insta.png"> </a> </li>
-                <li> <a href='https://www.youtube.com/?gl=FR&hl=fr'> <img class="icon" src="../Ressources/icon-youtube.png"> </a> </li>
-                <li> <a href='https://fr.linkedin.com/'> <img class="icon" src="../Ressources/icon-linkedin.png"> </a> </li>
-            </ul>
-        </section>
-        <section id = "footerQuatriemePartie">
-            <ul id="liste">
-                <li> <a class = "footerLienPetit" href='../accueil.html'> Mentions légales </a> </li>
-                <li> <a class = "footerLienPetit" href='../accueil.html'> Données personnelles </a> </li>
-                <li> <a class = "footerLienPetit" href='../accueil.html'> Cookies </a> </li>
-                <li> <a class = "footerLienPetit" href='../accueil.html'> Marchés publics </a> </li>
-                <li> <a class = "footerLienPetit" href='../accueil.html'> Crédits photographiques </a> </li>
-            </ul>
-        </section>
+        <div id = "footerPremiereLigne">
+            <section id = "footerPremierePartie">
+                <a class = "footerLienGras" href="../accueil.html"> Musée Bretcho </a>
+                <p> Arrêt "musée Bretcho"
+                    <br>
+                    Parking Bruno Lechaud
+                </p>
+                <p> HORAIRES </p>
+                <p>  Du lundi au samedi de 10h00 à 19h00 
+                    <br>
+                    Nocturne jusqu'a 23h le 1<sup>er</sup> mardi du mois
+                </p>
+                <a href="../HTML/contact.html" id = 'boutonInfo' class="bouton"> Nous contacter </a> 
+            </section>
+            <section id = "footerDeuxiemePartie">
+                <ul>
+                    <li> <a  class = "footerLienGras" href="#"> Agenda </a> </li>
+                    <li> <a  class = "footerLienGras" href="#"> Expositions </a> </li>
+                    <li> <a  class = "footerLienGras" href='../HTML/collection.html'> Collections </a> </li>
+                    <li> <a  class = "footerLienGras" href="#"> Billetterie </a> </li>
+                </ul>
+                <ul>
+                    <li> <a class = "footerLienBasique" href="#"> Espace presse </a> </li>
+                    <li> <a class = "footerLienBasique" href="#"> Entreprise </a> </li>
+                    <li> <a class = "footerLienBasique" href="#"> Horaires </a> </li>
+                    <li> <a class = "footerLienBasique" href="#"> Accès </a> </li>
+                    <li> <a class = "footerLienBasique" href="#"> FAQ </a> </li>
+                </ul>
+            </section>
+            <section id = "footerTroisiemePartie">
+                <ul>
+                    <li> <a href='https://fr-fr.facebook.com/login.php'> <img class="icon" src="../Ressources/icon-facebook.png"> </a> </li>
+                    <li> <a href='https://www.instagram.com/'> <img class="icon" src="../Ressources/icon-insta.png"> </a> </li>
+                    <li> <a href='https://www.youtube.com/?gl=FR&hl=fr'> <img class="icon" src="../Ressources/icon-youtube.png"> </a> </li>
+                    <li> <a href='https://fr.linkedin.com/'> <img class="icon" src="../Ressources/icon-linkedin.png"> </a> </li>
+                </ul>
+            </section>
+        </div>
+        <div id ="footerDeuxiemeLigne">
+            <section id = "footerQuatriemePartie">
+                <ul id="liste">
+                    <li> <a class = "footerLienPetit" href="#"> Mentions légales </a> </li>
+                    <li> <a class = "footerLienPetit" href="#"> Données personnelles </a> </li>
+                    <li> <a class = "footerLienPetit" href="#"> Cookies </a> </li>
+                    <li> <a class = "footerLienPetit" href="#"> Marchés publics </a> </li>
+                    <li> <a class = "footerLienPetit" href="#"> Crédits photographiques </a> </li>
+                </ul>
+            </section>
+        </div>
     </footer>
-    
+   
     <script src="../JS/scriptUneOeuvre.js"></script>
                 
 </body>
