tentation création du bouton

--- a/HTML/collection.html
+++ b/HTML/collection.html
@@ -36,6 +36,10 @@
             <h2></h2>
             </a>
         </div>
+
+        <div id="boutonScroll">
+            <p> Retour en haut de la page </p> 
+        </div>
     </main>
 
     <footer>
